--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             
             <div id="content-panel">
                 <div id="note-content">
-                    <h2>Welcome to Your Knowledge Graph</h2>
+                    <h2>Welcome to My Knowledge Graph</h2>
                     <p>Select a note from the graph or list view to display its content here.</p>
                     <p>Use the graph view to explore connections between your notes, or switch to list view for a traditional folder structure.</p>
                 </div>
